# webnovel-scrapper

./: .eslintrc.json  .gitignore  Makefile  README.md  package-lock.json  package.json  systemd.service  tsconfig.json
backend/: Cargo.toml  Config-Prod.toml  Config.toml  build.rs
backend/config/: local.toml  prod.toml
backend/migrations/: 20220804023626_user_account.sql
backend/src/: error.rs  main.rs  server.rs  service.rs  user.rs  user_account.rs  webnovel_reader.rs
frontend/: analysis_options.yaml  pubspec.yaml
frontend/lib/: account.dart  home.dart  login.dart  main.dart
frontend/web/: index.html
nginx/: dev.nginx.conf  prod.nginx.conf
openapi/: service.yaml  webnovel_reader.proto
proto/: user_account.proto  webnovel_reader.proto
src/: css.ts  driver.ts  index.ts  novelfull.ts  script.ts
web-client/: .eslintrc.json  angular.json  package-lock.json  package.json
web-client/src/: index.html  polyfills.ts  styles.scss
web-client/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  user_service.ts
web-client/src/app/book/: book.component.html  book.component.spec.ts  book.component.ts
web-client/src/app/chapter/: chapter.component.html  chapter.component.scss  chapter.component.spec.ts  chapter.component.ts
web-client/src/app/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
web-client/src/app/login/: login.component.html  login.component.scss  login.component.spec.ts  login.component.ts
web-client/src/app/root/: app.component.scss  app.component.ts
