[package]
name = "backend"
version = "0.0.0"
edition = '2021'

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
reqwest = "0.11.11"
scraper = "0.13.0"
cssparser = "0.27"
toml = "0.5.9"
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "offline",
    "sqlite",
] }
serde = { version = "1.0.140", features = ["derive"] }
selectors = "0.22.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.21"
